--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,8 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544101.md#1" target="_blank">维权人士看守所猝死 妻子哭诉：中共太黑暗</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544101.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wang-yumei-150x120.jpg" align ="left"></a>北京时间星期一（9月23日）凌晨4点多，曹曙霞被一通电话铃声惊醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544107.md#1" target="_blank">陕西临潼“70周年庆”花坛起火 民众叫好</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Unknown-11-150x120.jpg" align ="left"></a>十一“国殇日”逼近，中国大陆处处进入草木皆兵的神经绷紧状态之际，陕西临潼的一个中共“70周年庆”的摆设被烧毁，让民众开心不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544210.md#1" target="_blank">咸阳纪委前书记被指当内鬼 包庇涉黑人员</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/quan-wangjun1-150x120.jpg" align ="left"></a>中共陕西省咸阳市委前常委、市纪委书记、市监委主任权王军日前被“双开”并移送司法。权王军被指对抗审查，为涉黑涉恶人员提供保护，泄露案情当“内鬼”，搞权色交易，收受贿赂等。外界曾传出，权王军落马前自杀未遂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 3:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544133.md#1" target="_blank">川普联大演讲：中共不该再宣称是发展中国家</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KL3WF-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（9月24日）在联合国大会上发表演说。他对达成美中贸易协议表示乐观，但谴责中共的掠夺性行为。他表示，中共拒绝遵守承诺，拥抱一种不正当的经济模型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 2:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544052.md#1" target="_blank">27国联大签网络联合声明 暗示针对中俄</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1170794931-150x120.jpg" align ="left"></a>27个国家签署了一项联合声明，就网络空间中的公平和犯规行为达成共识，并承诺推动负责任的网络空间行为。外界认为这个声明针对的是中共和俄罗斯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 1:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543833.md#1" target="_blank">丹麦开反活摘会议 联合声明将提交欧洲首脑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1.-Alla-150x120.jpeg" align ="left"></a>2019年9月17日，在丹麦首都哥本哈根市政会议中心召开了一场主题为“紧急行动，中共活摘器官关系到所有人”的研讨会。研讨会正值2019年欧洲器官移植学会大会（ESOT）在哥本哈根召开之际，更加引发了外界对这个话题的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 1:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542207.md#1" target="_blank">私企遭入户清查 专家：中国经济全面倒退</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542207.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/06/1006172123221996-150x120.jpg" align ="left"></a>9月10日以来，中共官方对高科技为首的民营企业动作不断，从入户清查到派驻官员，企业从政治和经济上都被管死。专家分析认为，中共有组织地向非公有制企业派出政委和经济间谍，走的是公私合营的老路，下一步就是全面国营化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:50 AM							</td></tr>
@@ -28,6 +24,14 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543093.md#1" target="_blank">中共令国企投资香港 港企或掀跑路潮</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/190617233359100484-150x120.jpg" align ="left"></a>香港反送中抗议引发中共恐惧，中共为了控制香港令国营企业投资香港企业，妄图达到进而控制香港的目的。针对中共此举，台湾《财讯》认为，这将引发香港企业跑路潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543204.md#1" target="_blank">王老吉饮料再曝丑闻 倒出一坨似纸巾的异物</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543204.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/05/1205131000411758-150x120.jpg" align ="left"></a>近日，江西南昌市的8名顾客在一个小店吃饭时，从罐装饮料王老吉凉茶中喝到了一坨似纸巾的异物。此前王老吉被曝光，饮料罐中倒出死老鼠样的东西，令3岁孩子喝了之后反复发烧……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542588.md#1" target="_blank">窃国70年 中共治下中国七大丑恶经济现象</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542588.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/20190319-Chen-Bazhou-Taipei-401-150x120.jpg" align ="left"></a>中共篡政70周年之际，港媒指，中共以“牺牲百姓、辗压人权、毁生态”的方式发展经济，留下至少七大丑恶经济现象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543198.md#1" target="_blank">向警车扔汽油弹 疑似香港警察自导自演</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1908310905192188-150x120.jpg" align ="left"></a>9月21日晚上，有多名身穿黑衣的抗议者在香港元朗区向警车投掷汽油弹，其中一人被拍到身上有闪光灯，疑似警察之间的辨识装置，此人因而被认为是试图栽赃抗议者的卧底警察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 6:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542887.md#1" target="_blank">摩根资产：中国GDP增长或降至5.7%</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542887.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/05/811190953321497-150x120.jpg" align ="left"></a>摩根资产管理9月23日表示，预计中国经济增长目标可能降至5.7%～6.5%，人民币走势仍取决于美元走势和中美贸易谈判进展，相信短期内人民币兑美元仍徘徊在7～7.2之间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543044.md#1" target="_blank">国际特赦组织：中共以国安为由压迫香港人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/140429083343100311-150x120.jpg" align ="left"></a>人权团体国际特赦组织（Amnesty International）在周二（9月24日）发表的报告中指出，香港反送中运动这个最新的证明显示，中共多年来基于“国家安全”的政策和言论，导致越来越多香港活动人士和记者被审查、起诉和骚扰，其人权与自由已经受到侵蚀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542595.md#1" target="_blank">叶选平去世 广东官场“客家帮”终结</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542595.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/27-02_m1-1-600x400-1-1-150x120.jpg" align ="left"></a>中共已故元老叶剑英之子叶选平去世，外界指，这标志着广东官场“客家帮”崩落。此前，大批“客家帮”官员落马，包括前广州市委书记万庆良等“客家帮”典型成员。
+
+叶选平9月17月在广州去世，终年94岁。23日，其遗体告别式在广州举行。
+
+中共官场历来帮派林立。广东官场更是派系严重，可分为广府帮（即粤语帮）、梅州客家帮、潮汕帮和外来帮四大派系。其中又以1949.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543965.md#1" target="_blank">中共大使馆十一放烟花 立陶宛拒发许可</a><br></h3>立陶宛首都维尔纽斯（Vilnius）市面出现一批广告，宣传中共大使馆要在10月1日进行放烟花，邀请公众到首都市中心一条著名行人天桥附近，观看“焰火表演”，庆祝中共篡夺政权70周年。周一（9月23日）维尔纽斯政府拒绝就活动发出许可，市长西米西乌斯（Remigijus Simasius）表示，由于中共使馆没来征求市政府对外和公共事务部门的许可，来进行此次活动，因.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535135.md#1" target="_blank">吉林法院院长孙青山冤判多名法轮功学员</a><br></h3>在孙青山任中共榆树市法院党组书记、院长期间，从2016年11月至今，18名法轮功学员被非法判刑，法轮功学员宋兆恒被迫害致死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 9:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/12/n11516642.md#1" target="_blank">吉林榆树3名法轮功学员被非法庭审</a><br></h3>吉林省榆树市法轮功学员王凤娟、白丽君、樊云鹏于8月8日许被德惠市法院非法庭审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 8:52 PM							</td></tr>
